# zen-admin-backend

./: .gitignore  README.md  alembic.ini  database.py  design.md  implementation_notes.md  main.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: 2026_03_28_1029-0d1783d269c3_add_process_meeting_notes_log.py  2026_03_28_1142-b0ea8504c63f_add_notes_text_and_notes_markdown.py  2026_03_28_1222-d6a18a67ae8b_add_title_to_notes.py  2026_03_28_1231-8e192217487c_add_calendareventmeetingnotes_archived.py  cd313bc67ae8_initial_schema.py  cf453af874ef_add_meeting_notes_table.py
models/: base.py  constants.py  db.py
routers/: auth.py  calendar_suggestions.py  clients.py  errors.py  meeting_notes.py  meeting_type_todo_templates.py  meeting_types.py  n8n_ingestion.py  todos.py
services/: granola_notes_service.py
utils/: auth.py  env_vars.py  error_logging.py  gcal.py  openai_helpers.py  todo_builder.py
